--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url(/assets/img/background.png);
+  background-image: url("../img/background.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
